2004-09-03  Johan Dahlin  <johan@gnome.org>

	* flumotion/components/http/http.py
	(HTTPStreamingAdminResource.render_stats): Start cleaning up the
	statistics so we eventually can move them to a separate class.

	* flumotion/server/config.py (ConfigEntry.getComponent): Move back 
	function and clean up slightly.
	
	* flumotion/components/http/http.py:
	* flumotion/components/http/http_gui.py:
	* flumotion/gui/admininterface.py:
	* flumotion/server/admin.py:
	* flumotion/server/component.py:
	* flumotion/server/controller.py:

	Implement basic avatar proxy: to proxy method between the admin
	interface and the component interface. So far it's only one way
	and currently no error checking. Fixes Ticket #1

2004-09-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/config/__init__.py:
	  fix config with reload

2004-09-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/gui/admininterface.py:
	  fix callbacks for reload

2004-09-03  Johan Dahlin  <johan@gnome.org>

	* flumotion/gui/adminclient.py: Add an green icon for playing and
	a red one otherwise.

	* flumotion/server/controller.py: Make user interface work again

2004-09-02  Johan Dahlin  <johan@gnome.org>

	* flumotion/gui/admininterface.py (AdminInterface): Use debugging
	framework instead of prints

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/server/launcher.py:
	* flumotion/utils/log.py:
	  remove enableLogging and disableLogging.  Use new method,
	  setFluDebug.  Make that reset levels on the fly as well.

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/utils/log.py:
	  fix up debugging system, FLU_DEBUG now works like in GStreamer,
	  but with categories registered as they are encountered.

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin.in:
	* bin/flumotion.in:
	  trigger FLU_DEBUG parsing with debug.init
	* data/glade/admin.glade:
	  change name