@@ -1,3 +1,8 @@
+2004-09-03  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/gui/adminclient.py:
+	  properly handle error dialog.
+
 2004-09-03  Johan Dahlin  <johan@gnome.org>
 
 	* flumotion/components/http/http.py
